src/objects/BatchDefaultSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Batch Default Settings</label>
    <fields>
        <fullName>Error_Emails__c</fullName>
        <label>Error Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fogbugz_Cases_Fetch_Last_Date__c</fullName>
        <label>Fogbugz Cases Fetch Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Batch_Error_Check_Date__c</fullName>
        <label>Last Batch Error Check Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Card_Calculation_Last_Date__c</fullName>
        <label>Time Card Calculation Last Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>